force-app/main/default/objects/Credit_Memo__c/fields/image_View__c.field-meta.xml
<CustomField>
    <fullName>image_View__c</fullName>
    <description>image preview</description>
    <formula>IF(ISBLANK(imageIdHardCoded__c) ,  IMAGE( $Setup.Setting__c.imageHardCodeUrl__c+  $Setup.Setting__c.imageIdHardCoded__c, &quot;default image&quot;, 200, 200) ,  IMAGE($Setup.Setting__c.imageHardCodeUrl__c+ imageIdHardCoded__c, &quot;image not found&quot;, 200, 200) )</formula>
    <label>image View</label>
    <type>Text</type>
</CustomField>