force-app/main/default/objects/Credit_Memo__c/fields/imageIdHardCoded__c.field-meta.xml
<CustomField>
    <fullName>imageIdHardCoded__c</fullName>
    <label>imageIdHardCoded</label>
    <length>18</length>
    <type>Text</type>
</CustomField>