force-app/main/default/objects/Credit_Memo__c/fields/imageName__c.field-meta.xml
<CustomField>
    <fullName>imageName__c</fullName>
    <label>imageName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>