force-app/main/default/objects/Credit_Memo__c/fields/Is_Expired__c.field-meta.xml
<CustomField>
    <fullName>Is_Expired__c</fullName>
    <description>if expiry date is greater than today  ,checkbox is checked</description>
    <formula>IF(  AND(NOT(ISBLANK(Credit_Expiry_Date__c )),  Credit_Expiry_Date__c &lt;  TODAY() ) , true, false)</formula>
    <inlineHelpText>is the voucher expired?</inlineHelpText>
    <label>Is Expired ?</label>
    <type>Checkbox</type>
</CustomField>