force-app/main/default/objects/Credit_Memo__c/fields/note__c.field-meta.xml
<CustomField>
    <fullName>note__c</fullName>
    <defaultValue>$Setup.Setting__c.defaultNotes__c</defaultValue>
    <label>Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>